--- a/app/views/pastes/index.html.haml
+++ b/app/views/pastes/index.html.haml
@@ -29,7 +29,9 @@
           %td= paste.title.empty? ? truncate( markdown(paste.paste), :length => 100).html_safe : paste.title
           %td= ccap_timestamp( paste.created_at )
 
-
 = content_for :nav_bar_sub do
-  %li= link_to 'Create a New Paste', new_paste_path, :class => 'btn btn-success btn-large'
-  %li= link_to 'Show Expired Pastes', pastes_path(:all => true), :class => 'btn btn-success btn-large'
+  %li= link_to 'create a new paste', new_paste_path, :class => 'btn btn-success btn-large'
+  - if action_name == 'expired'
+    %li= link_to 'non-expired pastes', pastes_path, :class => 'btn btn-success btn-large'
+  - else
+    %li= link_to 'show expired pastes', expired_pastes_path, :class => 'btn btn-success btn-large'
