Move old pastes to a separate controller

--- a/app/views/old_pastes/index.html.haml
+++ b/app/views/old_pastes/index.html.haml
@@ -31,4 +31,4 @@
 
 = content_for :nav_bar_sub do
   %li= link_to 'create a new paste', new_paste_path, :class => 'btn btn-success btn-large'
-  %li= link_to 'show expired pastes', old_pastes_path, :class => 'btn btn-success btn-large'
+  %li= link_to 'non-expired pastes', pastes_path, :class => 'btn btn-success btn-large'
