fix the gradient in the buttons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,12 +6,16 @@
 $main-brown-color:   #CCBF99;
 $nav-bar-background: #4D597F;
 
-@import 'bootstrap';
-@import 'bootstrap-responsive';
-@import 'font-awesome';
+@import "bootstrap";
+@import "bootstrap-responsive";
+@import "font-awesome";
 
 body {
   margin-top: 10px;
+
+  #nav-bar-sub {
+    .btn { margin-bottom: 10px; }
+  }
 
   table {
     .links { width: 100px; }
