--- a/app/views/old_pastes/new.html.haml
+++ b/app/views/old_pastes/new.html.haml
@@ -2,4 +2,4 @@
   = page_title( "New Paste" )
 = render 'form'
 = content_for :nav_bar_sub do
-  %li= link_to 'All Pastes',  pastes_path, :class => 'btn btn-primary'
+  = link_to 'All Pastes',  pastes_path, :class => 'btn btn-primary'
