--- a/app/views/pastes/edit.html.haml
+++ b/app/views/pastes/edit.html.haml
@@ -2,5 +2,5 @@
   = page_title( "Editing Paste" )
 = render 'form'
 = content_for :nav_bar_sub do
-  %li= link_to 'Back', :back, :class => 'btn btn-primary'
-  %li= link_to 'Show', @paste, :class => 'btn btn-primary'
+  = link_to 'Back', :back, :class => 'btn btn-primary'
+  = link_to 'Show', @paste, :class => 'btn btn-primary'
