--- a/app/views/pastes/show.html.haml
+++ b/app/views/pastes/show.html.haml
@@ -18,6 +18,6 @@
 
 = content_for :nav_bar_sub do
   %div.nav.nav-pills
-    %li= link_to 'All',  pastes_path, :class => 'btn btn-primary'
-    %li= link_to 'New',  new_paste_path, :class => 'btn btn-primary'
-    %li= link_to 'Edit', edit_paste_path(@paste), :class => 'btn btn-primary'
+    = link_to 'All',  pastes_path, :class => 'btn btn-primary'
+    = link_to 'New',  new_paste_path, :class => 'btn btn-primary'
+    = link_to 'Edit', edit_paste_path(@paste), :class => 'btn btn-primary'
