Update to Rails 4, Bootstrap 3
* initial update to TB3. Should be stable.
* simplify markdown editor with TB markdown
* breakout ApplicationHelper into Feedback and Link Helpers
* Update how default_period is culled from Application::Settings
* Change button text to use LinkHelper
* Change button styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,8 +7,9 @@ $main-brown-color:   #CCBF99;
 $nav-bar-background: #4D597F;
 
 @import "bootstrap";
-@import "bootstrap-responsive";
 @import "font-awesome";
+@import "honey_badger";
+@import "pygments";
 
 body {
   margin-top: 10px;
