--- a/app/views/pastes/edit.html.haml
+++ b/app/views/pastes/edit.html.haml
@@ -1,6 +1,6 @@
 = content_for :header_title do
   = page_title( "Editing Paste" )
 = render 'form'
-= content_for :nav_bar_sub do
+= content_for :sub_navbar do
   = link_to 'Back', :back, :class => 'btn btn-primary'
   = link_to 'Show', @paste, :class => 'btn btn-primary'
