--- a/app/views/pastes/new.html.haml
+++ b/app/views/pastes/new.html.haml
@@ -1,5 +1,5 @@
 = content_for :header_title do
   = page_title( "New Paste" )
 = render 'form'
-= content_for :nav_bar_sub do
+= content_for :sub_navbar do
   = link_to 'All Pastes',  pastes_path, :class => 'btn btn-primary'
