--- a/app/views/pastes/show.html.haml
+++ b/app/views/pastes/show.html.haml
@@ -1,6 +1,3 @@
-= content_for :extra_css do
-  = css_from_string Pygments.css('.highlight')
-
 = content_for :sidebar_content do
   %table.table.table-condensed
     %tr
@@ -16,8 +13,8 @@
 = preserve do
   = markdown( @paste.paste )
 
-= content_for :nav_bar_sub do
+= content_for :sub_navbar do
   %div.nav.nav-pills
-    = link_to 'All',  pastes_path, :class => 'btn btn-primary'
-    = link_to 'New',  new_paste_path, :class => 'btn btn-primary'
-    = link_to 'Edit', edit_paste_path(@paste), :class => 'btn btn-primary'
+    = link_to index_link_no_text,  pastes_path,    :class => 'btn btn-primary'
+    = link_to new_link_no_text,  new_paste_path, :class => 'btn btn-primary'
+    = link_to edit_link_no_text, edit_paste_path(@paste), :class => 'btn btn-primary'
