--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{html_attrs('en')}
   %head
     %meta{'http-equiv' => "X-UA-Compatible", :content => "IE=9; IE=8; IE=7; IE=EDGE"}
     %meta{ :name=>"viewport", :content=>"width=device-width", 'initial-scale'=>1.0}
@@ -14,17 +14,16 @@
     = auto_discovery_link_tag :atom, "/opinion-feed"
     = auto_discovery_link_tag :rss,  "/opinion-feed.rss"
 
-  %body
-    #page-wrapper.container
-      %div.row-fluid
-        %div#nav-bar-sub.span3
-          = render "layouts/flash_messages"
-          - if content_for?(:header_title)
-            %legend= yield :header_title
-          = yield :nav_bar_sub
-          - if content_for?(:h3_content)
-            = yield :h3_content
-          %div
-            = yield :sidebar_content
-        %div#main-body.span9
-          %div#main-content= yield
+  %body.container
+    = honey_badger unless Rails.env.production?
+    #page-wrapper.row
+      #nav-bar-sub.col-md-3
+        = render "flash_messages"
+        - if content_for?(:header_title)
+          %legend= yield :header_title
+        = yield :sub_navbar
+        - if content_for?(:h3_content)
+          = yield :h3_content
+        %div= yield :sidebar_content
+      #main-body.col-md-9
+        #main-content= yield
