--- a/app/views/layouts/help.html.haml
+++ b/app/views/layouts/help.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{html_attrs('en')}
   %head
     %meta{'http-equiv' => "X-UA-Compatible", :content => "IE=9; IE=8; IE=7; IE=EDGE"}
     %meta{ :name=>"viewport", :content=>"width=device-width", 'initial-scale'=>1.0}
@@ -14,8 +14,8 @@
     = auto_discovery_link_tag :atom, "/opinion-feed"
     = auto_discovery_link_tag :rss,  "/opinion-feed.rss"
 
-  %body
-    #page-wrapper.container
-      %ul.nav.nav-pills
-        = yield :nav_bar_sub
+  %body.container
+    = honey_badger unless Rails.env.production?
+    #page-wrapper
+      %ul.nav.nav-pills= yield :sub_navbar
       %div#main-content= yield
