--- a/app/views/old_pastes/index.html.haml
+++ b/app/views/old_pastes/index.html.haml
@@ -6,6 +6,7 @@
 
 - if @pastes.present?
   %table.table.table-striped.table-bordered
+    %caption Expired Pastes
     %thead
       %tr
         %th.links &nbsp;
@@ -23,12 +24,12 @@
         %tr
           %td
             %ul.nav.nav-list
-              %li= link_to show_text, paste, alt: 'show', name: 'show'
-              %li= link_to edit_text, edit_paste_path(paste), alt: 'edit', name: 'edit'
-              %li= link_to delete_text, paste, confirm: 'Are you sure?', method: :delete, alt: 'delete', name: 'delete'
+              %li= link_to show_link_no_text, paste, alt: 'show', name: 'show'
+              %li= link_to edit_link_no_text, edit_paste_path(paste), alt: 'edit', name: 'edit'
+              %li= link_to delete_link_no_text, paste, confirm: 'Are you sure?', method: :delete, alt: 'delete', name: 'delete'
           %td= markdown(paste.read_title)
-          %td= ccap_timestamp( paste.created_at )
+          %td= display_timestamp( paste.created_at )
 
-= content_for :nav_bar_sub do
-  = link_to 'create a new paste', new_paste_path, :class => 'btn btn-success btn-block'
-  = link_to badges("show expired", @non_expired.length), pastes_path, class: 'btn btn-success btn-block'
+= content_for :sub_navbar do
+  = link_to new_link_no_text, new_paste_path, :class => 'btn btn-success'
+  = link_to index_link_no_text, pastes_path, :class => 'btn btn-info'
