--- a/app/views/pastes/_form.haml
+++ b/app/views/pastes/_form.haml
@@ -1,14 +1,9 @@
-= content_for :extra_js do
-  = tinymce_assets
-
-= simple_form_for(@paste, :defaults => {:input_html => { :class =>"span8"}},:html => {:class => 'form-horizontal'})  do |f|
-  = explain_errors(@paste)
-
-  = f.input :expire, :as => :string, :default => Time.now + 1.week, :input_html => {:class => 'datepicker'}
-  = f.input :title
-  = f.input :paste, :label => "Summary *", :label_html => {:class => "tinymce"}
-  %div.offset2
-    = f.submit "Submit", :class => 'btn btn-success btn-large'
-    %p= link_to '<b>*</b> indicates Github-flavored markup enabled text area'.html_safe, help_markdown_path
-
-= tinymce
+= simple_form_for @paste, defaults: {:input_html => {:class => 'form-control input-lg'}}, :html => {:role => 'form'}  do |f|
+  = explain_errors @paste
+  .form-group
+    = f.input :expire, :as => :string, :default => Paste.expire_period, :input_html => {:class => 'input-sm datepicker'}
+    = f.input :title
+    = f.input :paste, :label => "Summary *", :input_html => {'data-provide' => "markdown"}
+  .form-group
+    = f.button :submit, class: "btn-success"
+  %p= link_to '<b>*</b> indicates Github-flavored markup enabled text area'.html_safe, help_markdown_path
