update javascript for twitter bootstrap datepicker

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,8 +8,8 @@ $nav-bar-background: #4D597F;
 
 @import "bootstrap";
 @import "font-awesome";
-@import "honey_badger";
-@import "pygments";
+@import "ruby_badger";
+@import "bootstrap-datepicker";
 
 body {
   margin-top: 10px;
