change badger helper to use ruby badger gem

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     = auto_discovery_link_tag :rss,  "/opinion-feed.rss"
 
   %body.container
-    = honey_badger unless Rails.env.production?
+    = ruby_badger unless Rails.env.production?
     #page-wrapper.row
       #nav-bar-sub.col-md-3
         = render "flash_messages"
