--- a/app/views/pastes/_form.haml
+++ b/app/views/pastes/_form.haml
@@ -1,9 +1,10 @@
-= simple_form_for @paste, defaults: {:input_html => {:class => 'form-control input-lg'}}, :html => {:role => 'form'}  do |f|
+= simple_form_for @paste, defaults: {:input_html => {:class => 'form-control'}},
+  html: {role: 'form'}  do |f|
   = explain_errors @paste
   .form-group
-    = f.input :expire, :as => :string, :default => Paste.expire_period, :input_html => {:class => 'input-sm datepicker'}
+    = f.input :expire, as: :string, default: Paste.expire_period, input_html: {class: 'datepicker'}
     = f.input :title
-    = f.input :paste, :label => "Summary *", :input_html => {'data-provide' => "markdown"}
+    = f.input :paste, label: "Summary *", input_html: {data: {provide: "markdown"}}
   .form-group
     = f.button :submit, class: "btn-success"
   %p= link_to '<b>*</b> indicates Github-flavored markup enabled text area'.html_safe, help_markdown_path
