change date picker to use bootstrap 3

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,8 @@ $nav-bar-background: #4D597F;
 @import "bootstrap";
 @import "font-awesome";
 @import "ruby_badger";
-@import "bootstrap-datepicker";
+@import "pygments";
+@import "bootstrap-datetime-picker";
 
 body {
   margin-top: 10px;
