--- a/app/views/pastes/_form.haml
+++ b/app/views/pastes/_form.haml
@@ -1,10 +1,10 @@
 = simple_form_for @paste, defaults: {:input_html => {:class => 'form-control'}},
   html: {role: 'form'}  do |f|
   = explain_errors @paste
-  .form-group
-    = f.input :js_expire, as: :date_time_picker, default: Paste.expire_period
-    = f.input :title
-    = f.input :paste, label: "Summary *", input_html: {data: {provide: "markdown"}}
-  .form-group
+
+  .col-md-6= f.input :js_expire, label: "Expire", as: :date_time_picker, default: Paste.expire_period
+  .col-md-6= f.input :title
+  .col-md-12
+    = f.input :paste, label: fa_icon('github-alt', text: "Summary"), input_html: {rows: 20, data: {provide: "markdown"}}
     = f.button :submit, class: "btn-success"
-  %p= link_to '<b>*</b> indicates Github-flavored markup enabled text area'.html_safe, help_markdown_path
+    %p= link_to fa_icon('github-alt', text: "indicates Github-flavored markup enabled text area"), help_markdown_path
