update index views display of logo

--- a/app/views/expired/index.html.haml
+++ b/app/views/expired/index.html.haml
@@ -1,8 +1,6 @@
 = content_for :header_title do
-  - if @pastes.blank?
-    %div
-      = site_logo
-  - else
+  %div= site_logo
+  - if @pastes.present?
     = page_title( "Pastes in the system" )
 
 - if @pastes.blank?
